docs: adicionando documentacao na `ai/predict` de nova query de save opcional
